# cpp-docker-cicd-benchmark

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  Makefile  README.md
jenkins/: Jenkinsfile
src/: Heavy.cpp  MathLib.cpp  MathLib.h  Utils.cpp  Utils.h  main.cpp
